# unitree_go2_simulation

./: .gitignore  README.md  cmd  model_2249.pt
gz_sim_launcher/: package.xml  setup.cfg  setup.py  test.py
gz_sim_launcher/config/: go2_topic.yaml
gz_sim_launcher/gz_sim_launcher/: foot_contact_processor.py  odom_to_tf.py  policy_action_controller.py  unitree_legged_control.py
gz_sim_launcher/launch/: go2_world.launch.py
gz_sim_launcher/models/go2_description/: model.config  model.sdf  model.urdf
gz_sim_launcher/rviz/: go2.rviz
gz_sim_launcher/worlds/: empty_world.sdf  go2_plain.sdf
obs_preprocess/: package.xml  setup.cfg  setup.py
obs_preprocess/obs_preprocess/: __init__.py  obs_builder.py  obs_node.py
unitree_legged_msgs/: CMakeLists.txt  package.xml
unitree_legged_msgs/msg/: MotorState.msg
